src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 0, 0, 0;
  --background-end-rgb: 0, 0, 0;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 255, 255, 255;
    --background-end-rgb: 255, 255, 255;
  }
}

html, body {
  width: 100%;
  overflow-x: hidden;
}

* {
  max-width: 100%;
  box-sizing: border-box;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}
.indexMod .im-b3em {
  color: #0082ff; }

.indexMod .ProductCard_button {
  border: none;
  /* background-color: #383637; */
  /* background: url(../images/pc/b11-1.png) 0 0/100% 100% no-repeat; */
  font-size: 16px;
  color: #fff;
  border-radius: 76px;
  padding: 18px 38px;
}

